--- a/index.html
+++ b/index.html
@@ -75,16 +75,23 @@
     </div>
 
     <section class="item-sec">
-        <div class="container"> <h3 class=t5>Fetured Items</h3> <p class=t6>Shop for items based on what we featured in this week</p></div>
-        
-            <div class="t13"> <a class=с href="#"></a><img src="./img/Rectangle 15 copy.png" alt=""></div>
-            <div сlass="t14">ELLERY X M'O CAPSULE <br>Known for her sculptural takes on traditional <br> tailoring, Australian arbiter of cool Kym Ellery <br> teams up with Moda Operandi.</div>
-            <div class="t15">$52.00</div>
+        <div class="container"> 
+            <h3 class=t5>Fetured Items</h3> <p class=t6>Shop for items based on what we featured in this week</p>
+        </div>
+        <div class="t31">
+             <div class="t13"> <a class=с href="#"></a><img src="./img/Rectangle 15 copy.png" alt="">
+                <div сlass="t14">ELLERY X M'O CAPSULE <br>Known for her sculptural takes on traditional <br> tailoring, Australian arbiter of cool Kym Ellery <br> teams up with Moda Operandi.
+                </div>
+                <div class="t15">$52.00</div>
+            </div>
 
-            <div class=t8>
-                <div  ></div><img class="t16" src="./img/Layer 51.png" alt=""></div>
-                <div class="t17">ELLERY X M'O CAPSULE <br>Known for her sculptural takes on traditional <br> tailoring, Australian arbiter of cool Kym Ellery <br> teams up with Moda Operandi.</div>
+            <div class="t8">
+                <div  ></div><img class="t16" src="./img/Layer 51.png" alt="#">
+                <div class="t17">ELLERY X M'O CAPSULE <br>Known for her sculptural takes on traditional <br> tailoring, Australian arbiter of cool Kym Ellery <br> teams up with Moda Operandi.
+                </div>
                 <div class="t18">$52.00</div>
+            </div>
+        </div>
 
     </section>
     <!--div class=FeturedItems><h3 class=t5>Fetured Items</h3> <p class=t6>Shop for items based on what we featured in this week</p>  </div>
