--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                             </div>            
                         </div>
                  </li>
-                 <li class="header3"><a href="#"><img src="./img/Forma 3.png" alt=""></a></li>
+                 <li class="header3"><a href="registration.html"><img src="./img/Forma 3.png" alt=""></a></li>
                  <li class="header3"><a href="#"><img src="./img/Group 35.png" alt=""></a></li>
              </ul>   
             </div>
@@ -181,12 +181,12 @@
 
     </div>
     <div class="footer">
-        <div class="f1"> &copy; 2021 Brand  All Rights Reserved.</div>
-        <div class="f2">
-            <div class="f3" ><img src="./img/Vector — копия.png" alt=""></div>
-            <div class="f4" ><img src="./img/Vector (1).png" alt=""></div>
-            <div class="f5" ><img src="./img/Vector (2).png" alt=""></div>
-            <div class="f6" ><img src="./img/Vector (3).png" alt=""></div>
+        <div class="f10"> &copy; 2021 Brand  All Rights Reserved.</div>
+        <div class="f20">
+            <div class="f30" ><img src="./img/Vector — копия.png" alt=""></div>
+            <div class="f40" ><img src="./img/Vector (1).png" alt=""></div>
+            <div class="f50" ><img src="./img/Vector (2).png" alt=""></div>
+            <div class="f60" ><img src="./img/Vector (3).png" alt=""></div>
         </div>
     </div>
     
