--- a/registration.html
+++ b/registration.html
@@ -68,11 +68,14 @@
                 <input class="r6" type="text">
                     <div class="r7">
                         <input class="r8" type="checkbox" name="a" id="Famle">
+                        <label class="r21" for="r8">Male</label>
                         <input class="r9" type="checkbox" name="a" id="Male">
+                        <label class="r21" for="r9">Famle</label>
                     </div>
+                <p class="r20">Login details</p>
                 <input class="r10" type="text">
                 <input class="r11" type="text">
-                <p>Please use 8 or more characters, with at least 1 number and a mixture of uppercase and lowercase letters</p>
+                <p class="r19">Please use 8 or more characters, with at least 1 number and a mixture of uppercase and lowercase letters</p>
                 <button class="r12">JOIN NOW <img class="r13" src="./img/strel right.png" alt=""></button>
                
             </div>
